completed faq section along with functionality

--- a/index.html
+++ b/index.html
@@ -1070,6 +1070,195 @@
           </div>
         </div>
       </section>
+      <!-- Faq Section-->
+      <section id="faq" class="faq">
+        <div class="faq__title container">
+          <span class="faq__title__bg">Frequently Asked Questions</span>
+          <h2>Frequently Asked Questions</h2>
+          <p>
+            Necessitatibus eius consequatur ex aliquid fuga eum quidem sint
+            consectetur velit
+          </p>
+        </div>
+        <div class="container">
+          <div class="row align-items-start gy-4">
+            <div class="col-lg-5">
+              <div class="faq__sidebar">
+                <div class="faq__sidebar__img">
+                  <img src="assests/img/portfolio/illustration-5.webp" alt="" />
+                </div>
+                <div class="faq__sidebar__contact">
+                  <h3>
+                    <i class="bi bi-headset"></i>
+                    Need Assistance?
+                  </h3>
+                  <p>
+                    Donec rutrum congue leo eget malesuada. Quisque velit nisi,
+                    pretium ut lacinia in, elementum id enim.
+                  </p>
+                  <a href="" class="faq__sidebar__contact__btn"
+                    >Connect with Support</a
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-7">
+              <div class="faq__main">
+                <ul class="faq__main__tabs nav mb-4">
+                  <li class="faq__main__tabs__item">
+                    <button class="nav-link active">General Inquiries</button>
+                  </li>
+                  <li class="faq__main__tabs__item">
+                    <button class="nav-link">Account Services</button>
+                  </li>
+                  <li class="faq__main__tabs__item">
+                    <button class="nav-link">Billing & Payments</button>
+                  </li>
+                </ul>
+                <div class="faq__main__content">
+                  <div class="tab-pane fade show active">
+                    <div class="accordion">
+                      <div class="faq__main__content__item">
+                        <h3>How do I create a new account?</h3>
+                        <div class="faq__main__content__text">
+                          <p>
+                            Praesent sapien massa, convallis a pellentesque nec,
+                            egestas non nisi. Donec sollicitudin molestie
+                            malesuada. Vestibulum ac diam sit amet quam vehicula
+                            elementum. Curabitur arcu erat, accumsan id
+                            imperdiet et, porttitor at sem.
+                          </p>
+                        </div>
+                        <i class="bi bi-chevron-down faq-toggle"></i>
+                      </div>
+                      <div class="faq__main__content__item">
+                        <h3>What are the system requirements?</h3>
+                        <div class="faq__main__content__text">
+                          <p>
+                            Vivamus suscipit tortor eget felis porttitor
+                            volutpat. Mauris blandit aliquet elit, eget
+                            tincidunt nibh pulvinar a. Vestibulum ac diam sit
+                            amet quam vehicula elementum sed sit amet dui.
+                          </p>
+                        </div>
+                        <i class="bi bi-chevron-down faq-toggle"></i>
+                      </div>
+                      <div class="faq__main__content__item">
+                        <h3>Can I access my data offline?</h3>
+                        <div class="faq__main__content__text">
+                          <p>
+                            Nulla quis lorem ut libero malesuada feugiat.
+                            Vestibulum ac diam sit amet quam vehicula elementum
+                            sed sit amet dui. Nulla porttitor accumsan
+                            tincidunt. Quisque velit nisi, pretium ut lacinia
+                            in, elementum id enim.
+                          </p>
+                        </div>
+                        <i class="bi bi-chevron-down faq-toggle"></i>
+                      </div>
+                      <div class="faq__main__content__item">
+                        <h3>How do I report a bug or issue?</h3>
+                        <div class="faq__main__content__text">
+                          <p>
+                            Pellentesque in ipsum id orci porta dapibus. Nulla
+                            quis lorem ut libero malesuada feugiat. Donec
+                            sollicitudin molestie malesuada. Sed porttitor
+                            lectus nibh.
+                          </p>
+                        </div>
+                        <i class="bi bi-chevron-down faq-toggle"></i>
+                      </div>
+                      <div class="faq__main__content__item">
+                        <h3>What is your data privacy policy?</h3>
+                        <div class="faq__main__content__text">
+                          <p>
+                            Curabitur arcu erat, accumsan id imperdiet et,
+                            porttitor at sem. Vestibulum ac diam sit amet quam
+                            vehicula elementum. Sed porttitor lectus nibh.
+                          </p>
+                        </div>
+                        <i class="bi bi-chevron-down faq-toggle"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tab-pane fade">
+                    <div class="accordion">
+                      <div class="faq__main__content__item">
+                        <h3>How do I reset my password?</h3>
+                        <div class="faq__main__content__text">
+                          <p>
+                            Curabitur non nulla sit amet nisl tempus convallis
+                            quis ac lectus. Vivamus magna justo, lacinia eget
+                            consectetur sed, convallis at tellus. Nulla quis
+                            lorem ut libero malesuada feugiat.
+                          </p>
+                        </div>
+                        <i class="bi bi-chevron-down faq-toggle"></i>
+                      </div>
+                      <div class="faq__main__content__item">
+                        <h3>How to update account information?</h3>
+                        <div class="faq__main__content__text">
+                          <p>
+                            Donec rutrum congue leo eget malesuada. Lorem ipsum
+                            dolor sit amet, consectetur adipiscing elit.
+                            Praesent sapien massa, convallis a pellentesque nec,
+                            egestas non nisi.
+                          </p>
+                        </div>
+                        <i class="bi bi-chevron-down faq-toggle"></i>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="tab-pane fade">
+                    <div class="accordion">
+                      <div class="faq__main__content__item">
+                        <h3>What payment methods are accepted?</h3>
+                        <div class="faq__main__content__text">
+                          <p>
+                            Pellentesque in ipsum id orci porta dapibus. Sed
+                            porttitor lectus nibh. Cras ultricies ligula sed
+                            magna dictum porta. Curabitur aliquet quam id dui
+                            posuere blandit. Vivamus magna justo, lacinia eget
+                            consectetur sed, convallis at tellus.
+                          </p>
+                        </div>
+                        <i class="bi bi-chevron-down faq-toggle"></i>
+                      </div>
+                      <div class="faq__main__content__item">
+                        <h3>When will my payment be processed?</h3>
+                        <div class="faq__main__content__text">
+                          <p>
+                            Mauris blandit aliquet elit, eget tincidunt nibh
+                            pulvinar a. Nulla porttitor accumsan tincidunt.
+                            Curabitur non nulla sit amet nisl tempus convallis
+                            quis ac lectus. Quisque velit nisi, pretium ut
+                            lacinia in.
+                          </p>
+                        </div>
+                        <i class="bi bi-chevron-down faq-toggle"></i>
+                      </div>
+                      <div class="faq__main__content__item">
+                        <h3>Can I get a refund for my purchase?</h3>
+                        <div class="faq__main__content__text">
+                          <p>
+                            Vivamus magna justo, lacinia eget consectetur sed,
+                            convallis at tellus. Praesent sapien massa,
+                            convallis a pellentesque nec, egestas non nisi.
+                            Donec sollicitudin molestie malesuada.
+                          </p>
+                        </div>
+                        <i class="bi bi-chevron-down faq-toggle"></i>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- Team Section -->
+       
     </main>
     <header></header>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
