--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         <a class="my__logo">VISIBLE</a>
         <nav class="navmenu my__navbar">
           <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Services</a></li>
-            <li><a href="">Portfolio</a></li>
-            <li><a href="">Team</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#portfolio">Portfolio</a></li>
+            <li><a href="#team">Team</a></li>
             <li class="dropdown">
               <a href=""
                 ><span>Dropdown</span>
@@ -56,7 +56,7 @@
                 <li><a href="">Dropdown 4</a></li>
               </ul>
             </li>
-            <li><a href="">Contact</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
           <i class="my__toggle bi bi-list"></i>
         </nav>
