--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a class="my__logo">VISIBLE</a>
         <nav class="navmenu my__navbar">
           <ul>
-            <li><a href="#home">Home</a></li>
+            <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#services">Services</a></li>
             <li><a href="#portfolio">Portfolio</a></li>
@@ -65,7 +65,7 @@
 
     <main class="main">
       <!-- Home Section -->
-      <section class="home">
+      <section id="home" class="home">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -1599,7 +1599,7 @@
         </div>
       </section>
       <!-- Team Section -->
-      <section class="team">
+      <section id="team" class="team">
         <div class="container" data-aos="fade-up" data-aos-delay="100">
           <div class="team__header" data-aos="fade-up" data-aos-delay="200">
             <div class="row align items center">
@@ -1804,7 +1804,7 @@
         </div>
       </section>
       <!-- Contact Section -->
-      <section class="contact">
+      <section id="contact" class="contact">
         <div class="contact__title container" data-aos="fade-up">
           <span class="contact__title__bg">Contact</span>
           <h2>Contact</h2>
