--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
                       Migrate your operations effortlessly to the cloud for
                       enhanced flexibility and access.
                     </p>
-                    <div class="features__card__status">
+                    <div class="features__card__status pending">
                       <span class="features__card__status__indicator"></span>
                       <span class="features__card__status__text"
                         >in Devlopment</span
@@ -525,7 +525,7 @@
                       Automate complex processes and drive innovation with
                       AI-powered insights.
                     </p>
-                    <div class="features__card__status">
+                    <div class="features__card__status scheduled">
                       <span class="features__card__status__indicator"></span>
                       <span class="features__card__status__text"
                         >Scheduled</span
@@ -564,7 +564,7 @@
                     Monitor key metrics and identify growth opportunities with
                     detailed performance analytics.
                   </p>
-                  <div class="features__additional__card__active">
+                  <div class="features__additional__card__active pending">
                     <i class="bi bi-arrow-repeat"></i>
                     Pending
                   </div>
@@ -580,7 +580,7 @@
                     Develop strategies and implement tactics for achieving
                     sustainable revenue expansion.
                   </p>
-                  <div class="features__additional__card__active">
+                  <div class="features__additional__card__active planned">
                     <i class="bi bi-calendar-check"></i>
                     Planned
                   </div>
