--- a/index.html
+++ b/index.html
@@ -12,12 +12,21 @@
       rel="stylesheet"
       href="node_modules/bootstrap-icons/font/bootstrap-icons.css"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+
     <link rel="stylesheet" href="assests/css/custom.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abel&display=swap"
+      rel="stylesheet"
+    />
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
@@ -1439,7 +1448,11 @@
                 <div class="faq__main__content">
                   <div class="tab-pane fade show active">
                     <div class="accordion">
-                      <div class="faq__main__content__item" data-aos="fade-up" data-aos-delay="150">
+                      <div
+                        class="faq__main__content__item"
+                        data-aos="fade-up"
+                        data-aos-delay="150"
+                      >
                         <h3>How do I create a new account?</h3>
                         <div class="faq__main__content__text">
                           <p>
@@ -1452,7 +1465,11 @@
                         </div>
                         <i class="bi bi-chevron-down faq-toggle"></i>
                       </div>
-                      <div class="faq__main__content__item" data-aos="fade-up" data-aos-delay="200">
+                      <div
+                        class="faq__main__content__item"
+                        data-aos="fade-up"
+                        data-aos-delay="200"
+                      >
                         <h3>What are the system requirements?</h3>
                         <div class="faq__main__content__text">
                           <p>
@@ -1464,7 +1481,11 @@
                         </div>
                         <i class="bi bi-chevron-down faq-toggle"></i>
                       </div>
-                      <div class="faq__main__content__item" data-aos="fade-up" data-aos-delay="250">
+                      <div
+                        class="faq__main__content__item"
+                        data-aos="fade-up"
+                        data-aos-delay="250"
+                      >
                         <h3>Can I access my data offline?</h3>
                         <div class="faq__main__content__text">
                           <p>
@@ -1477,7 +1498,11 @@
                         </div>
                         <i class="bi bi-chevron-down faq-toggle"></i>
                       </div>
-                      <div class="faq__main__content__item" data-aos="fade-up" data-aos-delay="300">
+                      <div
+                        class="faq__main__content__item"
+                        data-aos="fade-up"
+                        data-aos-delay="300"
+                      >
                         <h3>How do I report a bug or issue?</h3>
                         <div class="faq__main__content__text">
                           <p>
@@ -1489,7 +1514,11 @@
                         </div>
                         <i class="bi bi-chevron-down faq-toggle"></i>
                       </div>
-                      <div class="faq__main__content__item" data-aos="fade-up" data-aos-delay="350">
+                      <div
+                        class="faq__main__content__item"
+                        data-aos="fade-up"
+                        data-aos-delay="350"
+                      >
                         <h3>What is your data privacy policy?</h3>
                         <div class="faq__main__content__text">
                           <p>
