added link to home btns

--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
                 </p>
               </div>
               <div class="home__buttons">
-                <a href="" class="primary-btn"
+                <a href="#services" class="primary-btn"
                   >Our Services <i class="bi bi-chevron-right"></i
                 ></a>
-                <a href="" class="secondary-btn">View Portfolio</a>
+                <a href="#portfolio" class="secondary-btn">View Portfolio</a>
               </div>
             </div>
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
